# poetry-python-template

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml  ruff.yml
